<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. <ashar786khan@gmail.com>
  ~ This file is part of Alphanet's Android Application.
  ~ Alphanet 's Android Application is free software : you can redistribute it and/or modify
  ~ it under the terms of GNU General Public License as published by the Free Software Foundation,
  ~ either version 3 of the License, or (at your option) any later version.
  ~
  ~ This Application is distributed in the hope that it will be useful
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General  Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License along with this Source File.
  ~  If not, see <http:www.gnu.org/licenses/>.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="8dp"
    android:padding="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/publish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_the_model"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/publish_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/description_of_your_model"
                android:inputType="text|textMultiLine"
                android:maxLines="5"
                android:minLines="3" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/publish_model_drop_out"
            android:text="@string/model_requires_a_dropout_value_to_run"
            android:layout_height="wrap_content"
            android:checked="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey" />

        <RadioGroup
            android:id="@+id/publish_type"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/publish_type_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/simple_feed_forward" />

            <RadioButton
                android:id="@+id/publish_type_conv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/convolution_network" />

            <!--todo : Enable this feature-->
            <RadioButton
                android:id="@+id/publish_type_recurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/recurrent_network" />
        </RadioGroup>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/publish_model_architecture"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_input"
                android:id="@+id/raw_input_architecture"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slate_runner"
                android:id="@+id/slate_architecture"/>
        </RadioGroup>
        <LinearLayout
            android:id="@+id/publish_conv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/publish_conv_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/width_in_pixels"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/publish_conv_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/height_pixels"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/publish_feed_container"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/publish_feed_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_input_features"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/publish_model_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_output_nodes"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_bg_grey"/>
        <Button
            android:id="@+id/publish_next_to_2"
            style="@style/DonateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/proceed_to_step_2"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </LinearLayout>
</android.support.v7.widget.CardView>